[gd_scene load_steps=16 format=3 uid="uid://boss_raccoon_king_001"]

[ext_resource type="Script" path="res://characters/enemies/boss_raccoon_king.gd" id="1_boss"]
[ext_resource type="Script" path="res://components/state_machine/state_machine.gd" id="2_state_machine"]
[ext_resource type="Script" path="res://characters/enemies/states/boss_idle.gd" id="3_boss_idle"]
[ext_resource type="Script" path="res://characters/enemies/states/boss_attack_swipe.gd" id="4_boss_swipe"]
[ext_resource type="Script" path="res://characters/enemies/states/boss_attack_charge.gd" id="5_boss_charge"]
[ext_resource type="Script" path="res://characters/enemies/states/boss_attack_summon.gd" id="6_boss_summon"]
[ext_resource type="Script" path="res://characters/enemies/states/enemy_hurt.gd" id="7_hurt"]
[ext_resource type="Script" path="res://characters/enemies/states/enemy_death.gd" id="8_death"]
[ext_resource type="Script" path="res://components/hitbox/hitbox.gd" id="9_hitbox"]
[ext_resource type="Script" path="res://components/hurtbox/hurtbox.gd" id="10_hurtbox"]
[ext_resource type="Script" path="res://components/health/health_component.gd" id="11_health"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_body"]
radius = 12.0
height = 28.0

[sub_resource type="CircleShape2D" id="CircleShape2D_detection"]
radius = 150.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hitbox"]
size = Vector2(24, 20)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hurtbox"]
radius = 14.0
height = 32.0

[node name="BossRaccoonKing" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 1
script = ExtResource("1_boss")

[node name="Sprite2D" type="Polygon2D" parent="."]
color = Color(0.25, 0.22, 0.3, 1)
polygon = PackedVector2Array(-7, -7, 7, -7, 7, 7, -7, 7)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 4)
shape = SubResource("CapsuleShape2D_body")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("2_state_machine")
initial_state_path = NodePath("BossIdle")

[node name="BossIdle" type="Node" parent="StateMachine"]
script = ExtResource("3_boss_idle")

[node name="BossAttackSwipe" type="Node" parent="StateMachine"]
script = ExtResource("4_boss_swipe")

[node name="BossAttackCharge" type="Node" parent="StateMachine"]
script = ExtResource("5_boss_charge")

[node name="BossAttackSummon" type="Node" parent="StateMachine"]
script = ExtResource("6_boss_summon")

[node name="Hurt" type="Node" parent="StateMachine"]
script = ExtResource("7_hurt")

[node name="Death" type="Node" parent="StateMachine"]
script = ExtResource("8_death")

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_detection")

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 16
monitoring = false
monitorable = false
script = ExtResource("9_hitbox")
damage = 25

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(20, 0)
shape = SubResource("RectangleShape2D_hitbox")
disabled = true

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 64
script = ExtResource("10_hurtbox")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, 4)
shape = SubResource("CapsuleShape2D_hurtbox")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("11_health")
max_health = 200
